@@ -39,6 +39,9 @@ limitations under the License.
           <dt class="index_max-doc">Max Doc:</dt>
             <dd class="index_max-doc value"></dd>
 
+          <dt class="index_deleted-docs">Deleted Docs:</dt>
+            <dd class="index_deleted-docs value"></dd>
+
           <dt class="index_version">Version:</dt>
             <dd class="index_version value"></dd>
 
